syntax = "proto3";
package GrpcLib.Service;
service gRPC {
  //简单rpc
  rpc Exec (APIRequest) returns (APIReply) {}
 
  //双向流rpc
  rpc Chat(stream APIRequest) returns ( stream APIReply) {}
}

message APIRequest {
    string ApiPath=1;
	string Data=2;
	string AppID=3;
	string Sign=4;
	int64 Time=5;
	string Token=6;
}

message APIReply {
    int32 Code=1;
	string Data=2;
	string Msg=3;
	string Action=4;
}
